--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .btn-block, .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .btn-purple{
-	background-color: #732C7B;
+	background-color: #337ab7;
 	color: white;
 }
 
@@ -13,8 +13,8 @@
 }
 
 .btn-block:hover, .btn-purple:hover {
- 	background-color: #39004d;
- 	color:  #BDAEC6;
+ 	background-color: #d9edf7;
+ 	color:  #31708f;
 }
 
 .nav-pills>li {
