--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -1,3 +1,4 @@
+/*Category search buttons style*/
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .btn-blue{
 	background-color: #337ab7;
 	color: white;
@@ -7,12 +8,12 @@
  	background-color: #d9edf7;
  	color:  #31708f;
 }
-
+/*Top 10 category buttons spaceing*/
 .nav-pills>li {
 	padding-left:19px;
   	padding-right:19px;
 }
-
+/*Rating badge colour*/
 .badge-success {
   background-color: #468847;
 }
