edit profile css: done commenting

--- a/public/css/edit-profile.css
+++ b/public/css/edit-profile.css
@@ -1,7 +1,8 @@
+/*Styling profile image*/
 #profile-photo {
 	margin-bottom: 20px;
 }
-
+/*Styling buttons*/
 .btn-primary {
 	margin-left: 10px;
 }
